# ada-conversations-api-demo

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
app/: __init__.py  ada_api.py
app/data/: messages.py
app/integrations/: zendesk.py
app/server/: __init__.py  api.py  webhooks.py
app/webpage/: chat_ui.py  index.py
tests/: test_zendesk_integration.py
