[project]
name = "ada-conversations-api-demo"
version = "0.1.0"
description = "A demo of the Ada Conversations API"
authors = [{ name = "Ada", email = "developer-partnerships@ada.support" }]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = ["nicegui >= 2.12.1", "python-dotenv >= 1.0.1", "svix >= 1.61.3"]
